[package]
name    = "rustjs"
version = "0.1.0"
license = "MIT"
authors = ["Yorkie Liu <yorkiefixer@gmail.com>"]
build   = "src/build.rs"

[lib]
name = "rustjs"
path = "src/lib.rs"

[dependencies]
rustc-serialize = "0.3"
libc = "0.1.7"
clap = "*"
openssl = "0.9.6"
futures = "0.1.6"
log = "0.4.6"
env_logger = "0.6.0"
tokio-core = "0.1.17"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[build-dependencies]
cc = "1.0.29"

[[bin]]
name = "rustjs"
test = false
doc = false
